--- a/index2.html
+++ b/index2.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <div class="content">
-        <h1>I am a content creator</h1>
-
-
+        <h1>I am a <span id="text"></span></h1>
     </div>
     <script src="index2.js"></script>
 </body>
